objects/LLC_BI__Real_Estate_Property_Details__c.object
<CustomObject>
    <description>This extension object captures granular details of Real Estate collateral.</description>
    <fields>
        <fullName>LLC_BI__Built_Up_Area__c</fullName>
        <description>Users or an integration manually populate this text field to include a brief description of the property’s built-up area.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a brief description of the built-up area.</inlineHelpText>
        <label>Built-Up Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ceiling_Type__c</fullName>
        <description>Users or an integration manually populate this picklist field to identify a property’s ceiling type of a real estate record.</description>
        <inlineHelpText>Select the property’s ceiling type from the picklist.</inlineHelpText>
        <label>Ceiling Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Beam</fullName>
                </value>
                <value>
                    <fullName>Shed</fullName>
                </value>
                <value>
                    <fullName>Cove</fullName>
                </value>
                <value>
                    <fullName>Coffered</fullName>
                </value>
                <value>
                    <fullName>Tray</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Construction_Class__c</fullName>
        <description>Users or an integration manually populate this picklist field to identify a property’s construction class type for a real estate collateral record.</description>
        <inlineHelpText>Select the property’s construction class type from the picklist.</inlineHelpText>
        <label>Construction Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average/ Standard Builders Grade</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Custom/ Luxury</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Economy/Standard</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Standard/Custom</fullName>
                </value>
                <value>
                    <fullName>Superior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Users or an integration manually populate this long text field to capture additional information about a property for the real estate record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter any additional information about the property in this field.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dwelling_Type__c</fullName>
        <description>Users or an integration manually populate this picklist field to identify a property’s dwelling type for the real estate collateral record.</description>
        <inlineHelpText>Select the property’s dwelling type from the picklist.</inlineHelpText>
        <label>Dwelling Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>High Rise Multiple Units</fullName>
                </value>
                <value>
                    <fullName>Low Rise Multiple Units</fullName>
                </value>
                <value>
                    <fullName>Single Family Detached Four Square</fullName>
                </value>
                <value>
                    <fullName>Single Family Detached Ranch</fullName>
                </value>
                <value>
                    <fullName>Single Family Detached Row Home</fullName>
                </value>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Semi Detached</fullName>
                </value>
                <value>
                    <fullName>Terraced</fullName>
                </value>
                <value>
                    <fullName>Purpose Built</fullName>
                </value>
                <value>
                    <fullName>Above Shop/Commercial</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Floor_Type__c</fullName>
        <description>Users or an integration manually populate this picklist field to identify a property’s floor type for the real estate collateral record.</description>
        <inlineHelpText>Select the property’s floor type from the picklist.</inlineHelpText>
        <label>Floor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ceramic Tile</fullName>
                </value>
                <value>
                    <fullName>Porcelain Tile</fullName>
                </value>
                <value>
                    <fullName>Floating Wood Tile</fullName>
                </value>
                <value>
                    <fullName>Carpet</fullName>
                </value>
                <value>
                    <fullName>Hardwood</fullName>
                </value>
                <value>
                    <fullName>Engineered Wood</fullName>
                </value>
                <value>
                    <fullName>Bamboo</fullName>
                </value>
                <value>
                    <fullName>Cork</fullName>
                </value>
                <value>
                    <fullName>Stone</fullName>
                </value>
                <value>
                    <fullName>Vinyl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Foundation_Type__c</fullName>
        <description>Users or an integration manually populate this picklist field to identify a property’s foundation type for the real estate collateral record.</description>
        <inlineHelpText>Select the property’s foundation type from the picklist.</inlineHelpText>
        <label>Foundation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Crawlspace</fullName>
                </value>
                <value>
                    <fullName>Pier and Beam</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Garage_Type__c</fullName>
        <description>Users or an integration manually populate this picklist field to identify a property’s garage type for the real estate collateral record.</description>
        <inlineHelpText>Select the property’s garage type from the picklist.</inlineHelpText>
        <label>Garage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Built-In</fullName>
                </value>
                <value>
                    <fullName>Carport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Period_Months__c</fullName>
        <description>Users or an integration manually populate this number field to identify the lease period for a property if it is a leased asset.</description>
        <inlineHelpText>If this property is a leased asset, enter the lease period for the property in this field.</inlineHelpText>
        <label>Lease Period (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Period_Years__c</fullName>
        <description>Users or an integration manually populate this number field to identify the lease period for a property if it is a leased asset.</description>
        <inlineHelpText>If this property is a leased asset, enter the lease period for the property in this field.</inlineHelpText>
        <label>Lease Period (Years)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name__c</fullName>
        <description>The system automatically populates this field to assign a record number to the collateral details record.</description>
        <inlineHelpText>This field contains the collateral detail record’s automated numerical identifier.</inlineHelpText>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Bathrooms__c</fullName>
        <description>Users or an integration manually populate this number field to indicate the number of bathrooms a property contains for a real estate collateral record.</description>
        <inlineHelpText>Enter the property’s total number of bathrooms in this field.</inlineHelpText>
        <label>Number Of Bathrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Bedrooms__c</fullName>
        <description>Users or an integration manually populate this number field to indicate the number of bedrooms a property contains for a real estate collateral record.</description>
        <inlineHelpText>Enter the property’s total number of bedrooms in this field.</inlineHelpText>
        <label>Number Of Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Floors__c</fullName>
        <description>Users or an integration manually populate this number field to indicate the number of floors a property contains for a real estate collateral record.</description>
        <inlineHelpText>Enter the property’s total number of floors in this field.</inlineHelpText>
        <label>Number Of Floors</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Kitchens__c</fullName>
        <description>Users or an integration manually populate this number field to indicate the number of kitchens a property contains for a real estate collateral record.</description>
        <inlineHelpText>Enter the property’s total number of kitchens in this field.</inlineHelpText>
        <label>Number Of Kitchens</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Parking_Spaces_In_Garage__c</fullName>
        <description>Users or an integration manually populate this number field to indicate the number of parking spaces a property contains for a real estate collateral record.</description>
        <inlineHelpText>Enter the property’s total number of parking spaces in this field.</inlineHelpText>
        <label>Number of Parking Spaces in Garage</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Property_Features__c</fullName>
        <description>Users or an integration manually populate this multi-select picklist to identify a property’s included features for a real estate property record.</description>
        <inlineHelpText>Select the extra features included with the property from the picklist. You can select more than one.</inlineHelpText>
        <label>Other Property Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Chimney</fullName>
                </value>
                <value>
                    <fullName>Swimming Pool</fullName>
                </value>
                <value>
                    <fullName>Elevator/Lift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Use__c</fullName>
        <description>Users or an integration manually populate this field to determine the real estate collateral’s primary use for a real estate collateral record.</description>
        <inlineHelpText>Select the property’s primary use from the picklist.</inlineHelpText>
        <label>Primary Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Residence</fullName>
                </value>
                <value>
                    <fullName>Second Home</fullName>
                </value>
                <value>
                    <fullName>Holiday Home</fullName>
                </value>
                <value>
                    <fullName>Sitting Tenant</fullName>
                </value>
                <value>
                    <fullName>Live Work Unit</fullName>
                </value>
                <value>
                    <fullName>Holiday Let</fullName>
                </value>
                <value>
                    <fullName>To Let</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Purchase_Date__c</fullName>
        <description>Users or an integration manually populate this date field to capture a property’s purchase date for for the real estate collateral record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the property’s purchase date in this field.</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Roof_Type__c</fullName>
        <description>Users or an integration manually populate this picklist to identify a property’s roof type for the real estate collateral record.</description>
        <inlineHelpText>Select the property’s roof type from the picklist.</inlineHelpText>
        <label>Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solar Tiles</fullName>
                </value>
                <value>
                    <fullName>Asphalt Shingles</fullName>
                </value>
                <value>
                    <fullName>Metal Roofing</fullName>
                </value>
                <value>
                    <fullName>Stone-coated Steel</fullName>
                </value>
                <value>
                    <fullName>Slate</fullName>
                </value>
                <value>
                    <fullName>Rubber Slate</fullName>
                </value>
                <value>
                    <fullName>Clay and Concrete Tiles</fullName>
                </value>
                <value>
                    <fullName>Green Roof</fullName>
                </value>
                <value>
                    <fullName>Built-up Roofing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Thatched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Wall_Construction_Type__c</fullName>
        <description>User or an integration manually populate this picklist field to identify a property’s wall construction type for the real estate collateral record.</description>
        <inlineHelpText>Select the property’s wall construction type from the picklist.</inlineHelpText>
        <label>Wall Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concrete</fullName>
                </value>
                <value>
                    <fullName>Timber Framed</fullName>
                </value>
                <value>
                    <fullName>Steel Framed</fullName>
                </value>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Built__c</fullName>
        <description>Users or an integration manually populate this number field to capture the year the property was built.</description>
        <inlineHelpText>Enter the year the property was built in this field.</inlineHelpText>
        <label>Year Built</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Real Estate Property Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Real Estate Property Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Estate Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>